<resources>
    <string name="app_name">Quiz App - ABND3</string>
    <string name="europe">Europe</string>
    <string name="globe_icon_alt">Globe Icon</string>
    <string name="question_mark_icon">Question Mark Icon</string>
    <string name="question_num_1">Question 1/8</string>
    <string name="question_num_2">Question 2/8</string>
    <string name="question_num_3">Question 3/8</string>
    <string name="question_num_4">Question 4/8</string>
    <string name="question_num_5">Question 5/8</string>
    <string name="question_num_6">Question 6/8</string>
    <string name="question_num_7">Question 7/8</string>
    <string name="question_num_8">Question 8/8</string>
    <string name="question_1">What is the highest mountain of Europe?</string>
    <string name="question_2">Which rivers have length of 2000km or more?</string>
    <string name="question_3">What is the capitol city of France?</string>
    <string name="question_4">What is the largest carnivore in Europe?</string>
    <string name="question_5">The biggest lake Lagoda - in which country is located?</string>
    <string name="question_6">Alps cover the region of which countries?</string>
    <string name="question_7">What % of Europe region is covered by forests?</string>
    <string name="question_8">Which Europe city/cities have more then 10 millions citizens?</string>
    <string name="answer_1_1">Mount Blanc</string>
    <string name="answer_1_2">Mount Etna</string>
    <string name="answer_1_3">Mount Elbrus</string>
    <string name="answer_2_1">Don</string>
    <string name="answer_2_2">Volga</string>
    <string name="answer_2_3">Ural</string>
    <string name="answer_4_1">Wolverine</string>
    <string name="answer_4_2">Brown Bear</string>
    <string name="answer_4_3">Snow Leopard</string>
    <string name="answer_5_1">Wolverine</string>
    <string name="answer_5_2">Brown Bear</string>
    <string name="answer_5_3">Snow Leopard</string>
    <string name="answer_6_1">Italy</string>
    <string name="answer_6_2">Austria</string>
    <string name="answer_6_3">Switzerland</string>
    <string name="answer_7_1">~26%</string>
    <string name="answer_7_2">~36%</string>
    <string name="answer_7_3">~46%</string>
    <string name="answer_8_1">Moscow</string>
    <string name="answer_8_2">London</string>
    <string name="answer_8_3">Istanbul</string>
    <string name="check_answers">Check Answers</string>
    <string name="icon_river">River Icon</string>
    <string name="icon_tree">Tree Icon</string>
    <string name="icon_mountain">Mountain Icon</string>
    <string name="icon_city">City Icon</string>
    <string name="reset">Reset</string>
</resources>